bugfix(Tooltip): make Tooltip more visible in Storybook

--- a/packages/styles/scss/components/_tooltip.scss
+++ b/packages/styles/scss/components/_tooltip.scss
@@ -193,3 +193,7 @@
     }
   }
 }
+
+.docs-story div[height] {
+  min-height: 150px;
+}
